added main menu and fixed some bugs from pause
objects still in front of pause menu :(

--- a/MindCatch.csproj
+++ b/MindCatch.csproj
@@ -236,6 +236,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Assets\Scripts\Falling_Object_Script.cs" />
+    <Compile Include="Assets\Scripts\MainMenu_Script.cs" />
     <Compile Include="Assets\Scripts\Pause_Menu_Script.cs" />
     <Compile Include="Assets\Scripts\Player_Script.cs" />
     <Compile Include="Assets\Scripts\Random_Object_Script.cs" />
